kubernetes/apps/penpot/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: penpot
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
